[package]
name = "bevy_simple_text_input"
version = "0.9.2"
edition = "2021"
license = "MIT OR Apache-2.0"
description = "Bevy plugin for a simple single-line text input widget."
repository = "https://github.com/rparrett/bevy_simple_text_input"
homepage = "https://github.com/rparrett/bevy_simple_text_input"
documentation = "https://docs.rs/bevy_simple_text_input"
keywords = ["bevy", "gamedev"]
categories = ["game-development"]
readme = "README.md"
exclude = [".github"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

# Bevy needs either its `x11` or `wayland` features enabled to compile on linux.
# By default, Bevy includes `x11`, so we will too.
[features]
default = ["x11"]
x11 = ["bevy/x11"]

[dependencies.bevy]
git = "https://github.com/bevyengine/bevy"
default-features = false
features = ["bevy_ui", "bevy_asset", "bevy_text"]

[dev-dependencies.bevy]
git = "https://github.com/bevyengine/bevy"
default-features = true


[lints.rust]
missing_docs = "warn"

[lints.clippy]
type_complexity = "allow"
