[package]
name = "bevy_simple_text_input"
version = "0.10.2"
edition = "2021"
license = "MIT OR Apache-2.0"
description = "Bevy plugin for a simple single-line text input widget."
repository = "https://github.com/rparrett/bevy_simple_text_input"
homepage = "https://github.com/rparrett/bevy_simple_text_input"
documentation = "https://docs.rs/bevy_simple_text_input"
keywords = ["bevy", "gamedev"]
categories = ["game-development"]
readme = "README.md"
exclude = [".github"]

[features]
default = ["std"]
std = ["bevy/std"]
libm = ["bevy/libm"]

[dependencies.bevy]
version = "0.16.0"
default-features = false
features = ["bevy_ui", "bevy_asset", "bevy_text", "bevy_window"]

[dev-dependencies.bevy]
version = "0.16.0"
default-features = true

[lints.rust]
missing_docs = "warn"

[lints.clippy]
type_complexity = "allow"
