[package]
name = "bevy_simple_text_input"
version = "0.8.0"
edition = "2021"
license = "MIT OR Apache-2.0"
description = "Bevy plugin for a simple single-line text input widget."
repository = "https://github.com/rparrett/bevy_simple_text_input"
homepage = "https://github.com/rparrett/bevy_simple_text_input"
documentation = "https://docs.rs/bevy_simple_text_input"
keywords = ["bevy", "gamedev"]
categories = ["game-development"]
readme = "README.md"
exclude = [".github"]

[features]
default = ["clipboard"]
clipboard = ["dep:copypwasmta", "dep:futures-lite"]

[dependencies]
once_cell = "1.19.0"
# copypwasmta = { version = "0.10", optional = true }
copypwasmta = { git = "https://github.com/robtfm/copypwasmta", optional = true }
futures-lite = { version = "1.12.0", optional = true }

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies.bevy]
version = "0.14"
default-features = false
features = ["bevy_ui", "bevy_asset", "bevy_text", "multi_threaded"]

[dev-dependencies.bevy]
version = "0.14"
default-features = true

[lints.rust]
missing_docs = "warn"

[lints.clippy]
type_complexity = "allow"

[patch.crates-io]
bevy = { git = "https://github.com/robtfm/bevy", branch = "release-0.14-dcl-cosmic" }
# bevy = { path = "../bevy" }
